# secret-kv

./: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml
.github/workflows/: action-test.yml  publish.yml  test.yml  test_publish.yml
scripts/: semantic-release.sh
secret_kv/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  internal_types.py  sentinel.py  simple.py  sql_store.py  store.py  util.py  value.py  version.py
secret_kv/config/: __init__.py  base.py  context.py  keyring_passphrase.py  passphrase.py  sql_store.py  store.py
