[tool.poetry]
name = "secret-kv"
version = "0.1.0"
description = "Project-local secret key/value storage protected by a single passphrase stored in keyring"
authors = [ "Sam McKelvie <dev@mckelvie.org>" ]
license = "MIT"
keywords = [ "password", "passphrase", "secret", "keychain", "keyring" ]
readme = "README.md"
homepage = "https://github.com/sammck/secret-kv"
repository = "https://github.com/sammck/secret-kv.git"


[tool.poetry.dependencies]
python = "^3.8"
sqlcipher3 = "^0.4.5"
keyring = "^23.5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
secret-kv = 'secret_kv.__main__:run'
