[tool.poetry]
name = "secret-kv"
version = "1.1.1"
description = "Project-local secret key/value storage protected by a single passphrase stored in keyring"
authors = [ "Sam McKelvie <dev@mckelvie.org>" ]
license = "MIT"
keywords = [ "password", "passphrase", "secret", "keychain", "keyring" ]
readme = "README.md"
homepage = "https://github.com/sammck/secret-kv"
repository = "https://github.com/sammck/secret-kv.git"


[tool.poetry.dependencies]
python = "^3.8"
sqlcipher3 = "^0.4.5"
keyring = "^23.5.0"
argcomplete = "^2.0.0"
jq = "^1.2.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
dunamai = "^1.9.0"
python-semantic-release = "^7.25.2"
pydoc-markdown = "^4.6.0"
doc2md = "^0.1.0"
Sphinx = "^4.4.0"
sphinx-markdown-builder = "^0.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
secret-kv = 'secret_kv.__main__:run'

[tool.semantic_release]
version_variable = 'secret_kv/version.py:__version__'
version_toml = 'pyproject.toml:tool.poetry.version'
branch = 'main'
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
